--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Mon Apr 22 17:06:12 IST 2019
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-scm.url=scm\:git\:https\://github.com/sharvilgarg/new-pet-clinic.git
-preparationGoals=clean verify
-projectVersionPolicyId=default
-remoteTagging=true
+#Mon Apr 22 17:10:02 IST 2019
+project.scm.com.project\:new-pet-clinic.tag=HEAD
 scm.commentPrefix=[maven-release-plugin] 
+pushChanges=true
+project.scm.com.project\:pet-clinic-web.empty=true
+scm.tag=new-pet-clinic-0.0.1
+remoteTagging=true
+project.dev.com.project\:new-pet-clinic=0.0.2-SNAPSHOT
+project.rel.com.project\:pet-clinic-data=0.0.1
+projectVersionPolicyId=default
+scm.url=scm\:git\:https\://github.com/sharvilgarg/new-pet-clinic.git
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+preparationGoals=clean verify
+project.dev.com.project\:pet-clinic-web=0.0.2-SNAPSHOT
+project.rel.com.project\:new-pet-clinic=0.0.1
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+project.scm.com.project\:pet-clinic-data.empty=true
+project.dev.com.project\:pet-clinic-data=0.0.2-SNAPSHOT
+project.scm.com.project\:new-pet-clinic.developerConnection=scm\:git\:git@github.com\:sharvilgarg/new-pet-clinic.git
+project.rel.com.project\:pet-clinic-web=0.0.1
+completedPhase=generate-release-poms
