--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>new-pet-clinic</artifactId>
         <groupId>com.project</groupId>
-        <version>0.0.1</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>com.project</groupId>
             <artifactId>pet-clinic-data</artifactId>
-            <version>0.0.1</version>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
