--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>com.project</groupId>
     <artifactId>new-pet-clinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>new-pet-clinic</name>
     <description>Pet Clinic Project</description>
 
@@ -43,7 +43,7 @@
         </plugins>
     </build>
     <scm>
-        <developerConnection>scm:git:https://github.com/sharvilgarg/new-pet-clinic.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:sharvilgarg/new-pet-clinic.git</developerConnection>
       <tag>HEAD</tag>
   </scm>
 </project>
